Change background image URL in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     body {
       height: 100vh;
-      background: url('./assets/bg-desktop.jpg') no-repeat center center;
+      background: url('https://i.ibb.co/svLF9HyP/9aef5457-85d1-45af-898b-d801a8309378.png') no-repeat center center;
       background-size: cover;
       display: flex;
       align-items: flex-end;
