--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
   <style>
+    .content {
+  backdrop-filter: blur(8px);
+  background: rgba(0,0,0,0.4);
+  padding: 40px;
+  border-radius: 16px;
+}
+
     * {
       margin: 0;
       padding: 0;
