Add Discord button styles to index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
       margin-bottom: 20px;
       line-height: 1.2;
     }
+.discord-btn {
+  font-size: 18px;
+  padding: 16px 28px;
+  border-radius: 14px;
+  background: linear-gradient(135deg, #5865F2, #7b86ff);
+  box-shadow: 0 0 25px rgba(88,101,242,0.7);
+}
+
+.discord-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 40px rgba(88,101,242,1);
+}
 
     .discord-btn {
       display: inline-flex;
