--- a/index.html
+++ b/index.html
@@ -1,143 +1,155 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guild Monarcas</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Guild Monarcas</title>
 
-  <!-- Fuente moderna -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+   <!-- Fuente moderna -->
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-  <style>
-    body::before {
-  background: linear-gradient(to top, rgba(0,0,0,0.85), rgba(0,0,0,0.4));
-}
-
-    .content {
-  animation: fadeUp 1s ease forwards;
-}
-
-@keyframes fadeUp {
-  from {
-    opacity: 0;
-    transform: translateY(40px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-    .content {
-  backdrop-filter: blur(8px);
-  background: rgba(0,0,0,0.4);
-  padding: 40px;
-  border-radius: 16px;
-}
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      height: 100vh;
-      background: url('https://i.ibb.co/svLF9HyP/9aef5457-85d1-45af-898b-d801a8309378.png') no-repeat center center;
-      background-size: cover;
-      display: flex;
-      align-items: flex-end;
-      justify-content: flex-start;
-      color: white;
-    }
-
-    /* Overlay oscuro para mejorar legibilidad */
-    body::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      z-index: 0;
-    }
-
-    .content {
-      position: relative;
-      z-index: 1;
-      padding: 60px;
-      max-width: 500px;
-    }
-
-    .content h1 {
-      font-size: 32px;
-      font-weight: 700;
-      margin-bottom: 20px;
-      line-height: 1.2;
-    }
-.discord-btn {
-  font-size: 18px;
-  padding: 16px 28px;
-  border-radius: 14px;
-  background: linear-gradient(135deg, #5865F2, #7b86ff);
-  box-shadow: 0 0 25px rgba(88,101,242,0.7);
-}
-
-.discord-btn:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 40px rgba(88,101,242,1);
-}
-
-    .discord-btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      background: #5865F2;
-      color: white;
-      text-decoration: none;
-      padding: 14px 22px;
-      border-radius: 12px;
-      font-weight: 500;
-      transition: all 0.3s ease;
-      box-shadow: 0 10px 30px rgba(88, 101, 242, 0.5);
-    }
-
-    .discord-btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 15px 40px rgba(88, 101, 242, 0.7);
-      background: #4752c4;
-    }
-
-    /* RESPONSIVE MOBILE */
-    @media (max-width: 768px) {
-      body {
-        align-items: center;
-        justify-content: center;
-        text-align: center;
+   <style>
+      body::before {
+         background: linear-gradient(to top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.4));
       }
 
       .content {
-        padding: 30px;
+         animation: fadeUp 1s ease forwards;
+      }
+
+      @keyframes fadeUp {
+         from {
+            opacity: 0;
+            transform: translateY(40px);
+         }
+
+         to {
+            opacity: 1;
+            transform: translateY(0);
+         }
+      }
+
+      .content {
+         backdrop-filter: blur(8px);
+         background: rgba(0, 0, 0, 0.4);
+         padding: 40px;
+         border-radius: 16px;
+      }
+
+      * {
+         margin: 0;
+         padding: 0;
+         box-sizing: border-box;
+         font-family: 'Poppins', sans-serif;
+      }
+
+      body {
+         height: 100vh;
+         background: url('https://i.ibb.co/svLF9HyP/9aef5457-85d1-45af-898b-d801a8309378.png') no-repeat center center;
+         background-size: cover;
+         display: flex;
+         align-items: flex-end;
+         justify-content: flex-start;
+         color: white;
+      }
+
+      /* Overlay oscuro para mejorar legibilidad */
+      body::before {
+         content: "";
+         position: absolute;
+         inset: 0;
+         z-index: 0;
+      }
+
+      .content {
+         position: relative;
+         z-index: 1;
+         padding: 40px;
+         max-width: 500px;
+         margin-left: 40px;
+         margin-bottom: 40px;
       }
 
       .content h1 {
-        font-size: 24px;
+         font-size: 32px;
+         font-weight: 700;
+         margin-bottom: 20px;
+         line-height: 1.2;
       }
-    }
-  </style>
+
+      .discord-btn {
+         font-size: 18px;
+         padding: 16px 28px;
+         border-radius: 14px;
+         background: linear-gradient(135deg, #5865F2, #7b86ff);
+         box-shadow: 0 0 25px rgba(88, 101, 242, 0.7);
+      }
+
+      .discord-btn:hover {
+         transform: scale(1.05);
+         box-shadow: 0 0 40px rgba(88, 101, 242, 1);
+      }
+
+      .discord-btn {
+         display: inline-flex;
+         align-items: center;
+         gap: 10px;
+         background: #5865F2;
+         color: white;
+         text-decoration: none;
+         padding: 14px 22px;
+         border-radius: 12px;
+         font-weight: 500;
+         transition: all 0.3s ease;
+         box-shadow: 0 10px 30px rgba(88, 101, 242, 0.5);
+      }
+
+      .discord-btn:hover {
+         transform: translateY(-3px);
+         box-shadow: 0 15px 40px rgba(88, 101, 242, 0.7);
+         background: #4752c4;
+      }
+
+      /* RESPONSIVE MOBILE */
+      @media (max-width: 768px) {
+         body {
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+         }
+
+         .content {
+            padding: 30px;
+            margin-left: 10px;
+            margin-bottom: 0px;
+            margin-right: 10px;
+            max-width: 100%;
+            position: absolute;
+            bottom: 50px;
+         }
+
+         .content h1 {
+            font-size: 24px;
+         }
+      }
+   </style>
 </head>
 
 <body>
 
-  <div class="content">
-    <h1>Únete a nuestro Discord</h1>
-    
-    <a href="#" class="discord-btn">
-      🚀 Unirse ahora
-    </a>
-    <p class="subtext">
-Servidor 05 • PvP activo • Comunidad competitiva
-</p>
+   <div class="content">
+      <h1>Únete a nuestro Discord</h1>
 
-  </div>
+      <a href="#" class="discord-btn">
+         🚀 Unirse ahora
+      </a><br><br>
+      <p class="subtext">
+         Servidor 05 • PvP activo • Comunidad competitiva
+      </p>
+
+   </div>
 
 </body>
+
 </html>
